# texas_will_generator

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
apps/api/: .env.example  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/clauses/: library.json
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: intake.py
apps/api/app/schemas/: intake.py
apps/api/app/services/: documents.py  langchain_service.py  rules.py
apps/api/app/tests/: test_api.py
apps/web/: jest.config.js  next.config.js  package.json  tsconfig.json
apps/web/__tests__/: wizard.test.tsx
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/intake/: page.tsx
apps/web/app/results/: page.tsx
apps/web/app/review/: page.tsx
apps/web/components/: BeneficiarySplitEditor.tsx  DocumentCard.tsx  FormField.tsx  LegalGuidancePanel.tsx  PersonCard.tsx  ProgressStepper.tsx  RiskBanner.tsx
apps/web/lib/: api.ts
