[project]
name = "texas-will-api"
version = "0.1.0"
description = "Texas will generator backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "python-multipart>=0.0.9",
  "docxtpl>=0.17.0",
  "python-docx>=1.1.2",
  "langchain>=0.2.12",
  "langchain-core>=0.2.28",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["app"]
